--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -24,6 +24,7 @@ ul {
   transform: scale(1.02);
 }
 
+
 .modal {
   display: flex;
   align-items: center;
@@ -32,4 +33,8 @@ ul {
   background-color: white;
   border: 2px solid rgb(240, 240, 240);
   border-radius: 12px;
+}
+
+.css-1t1j96h-MuiPaper-root-MuiDialog-paper {
+  max-width: 100%!important
 }
