--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -35,6 +35,6 @@ ul {
   border-radius: 12px;
 }
 
-.css-1t1j96h-MuiPaper-root-MuiDialog-paper {
-  max-width: 100%!important
-}
+// .MuiPaper-root-MuiDialog-paper {
+//   max-width: 100%!important
+// }
