--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -14,27 +14,28 @@ ul {
 
 }
 
+
+body {
+  margin: 0;
+  font-family: 'Alfa Slab One', cursive;
+
+}
+
 .App {
   position: relative;
   text-align: center;
   min-height: 100vh;
   background-image: url(./BACK.jpg);
-
-
 }
 
 .image-item {
+  overflow: hidden;
+  transform: scale(1);
+  transition: all 1s ease-in-out
+}
+
+.image-item:hover img  {
   transform: scale(1.02);
 }
 
-
-.modal {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
-  background-color: white;
-  border: 2px solid rgb(240, 240, 240);
-  border-radius: 12px;
-}
 
