--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -24,6 +24,9 @@ body {
   text-align: center;
   min-height: 100vh;
   background-image: url(./BACK.jpg);
+  background-color: black;
+  background-repeat: no-repeat;
+  background-position: top center;
 }
 
 .image-item {
