refactor: improve structure

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -24,7 +24,7 @@ a {
   min-height: 100vh;
   min-height: 100dvh;
   background-color: black;
-  background-image: url("./BACK.jpg");
+  background-image: url("../../public/BACK.jpg");
   background-position: top center;
   background-repeat: no-repeat;
   text-align: center;
