--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -32,7 +32,7 @@ a {
 
 body {
   margin: 0;
-  font-family: 'Alfa Slab One', cursive;
+  font-family: DelaGothicOne, cursive;
 }
 
 /* stylelint-disable-next-line selector-class-pattern */
@@ -51,4 +51,10 @@ body {
 
 .image-item:hover img {
   transform: scale(1.02);
+}
+
+@font-face {
+  font-weight: 400;
+  font-family: DelaGothicOne;
+  src: url("../../public/fonts/DelaGothicOne-Regular.ttf");
 }
